--- a/header.html
+++ b/header.html
@@ -59,7 +59,7 @@
         <td><a href="#">Home</a></td>
         <td><a href="login.html" target="page"> Login</a></td>
         <td><a href="registration.html" target="page">Regestration</a></td>
-        <td><a href="Catalouge.html" target="page">catalouge</a></td>
+        <td><a href="catalouge.html" target="page">catalouge</a></td>
         <td><a href="cart.html" target="page">Cart</a></td>
       </tr>
     </table>
